[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["Omar Sorour <omarsorour.os@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
httpie = "^3.2.4"
requests = "^2.32.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
